stack/heimdall/deployment-heimdall.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      nodeSelector:
        dfl.mn/datacentre: digitalocean
      containers:
        - name: heimdall
          image: linuxserver/heimdall:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: "/config"
            name: heimdall
      volumes:
        - name: heimdall
          persistentVolumeClaim:
            claimName: heimdall
