stack/heimdall/ingress-heimdall.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heimdall
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: issuer-cert-manager-production
    certmanager.k8s.io/cluster-issuer: issuer-cert-manager-production
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - heimdall.dfl.mn
    secretName: cert-heimdall
  rules:
  - host: heimdall.dfl.mn
    http:
      paths:
      - path: /
        backend:
          serviceName: heimdall
          servicePort: 80
